# cnc-digital-twin

./: .gitignore  README.md
RFID/: CMakeLists.txt  README.md
RFID/main/: CMakeLists.txt  RFID.c
RFID_Open/: CMakeLists.txt  README.md
RFID_Open/main/: CMakeLists.txt  RFID_Open.c
Ultrasonic/: CMakeLists.txt  README.md
Ultrasonic/main/: CMakeLists.txt  Ultrasonic.c
accel/: CMakeLists.txt  README.md
accel/main/: CMakeLists.txt  accel.c
barcode_reader/: CMakeLists.txt  README.md
barcode_reader/main/: CMakeLists.txt  barcode_reader.c
basics/: CMakeLists.txt  README.md
basics/main/: CMakeLists.txt  basics.c
dashboard/: README.md  esp32_dashboard.py  requirements.txt
dashboard/templates/: dashboard.html
integrated_rtos_work/: ARCHITECTURE_GUIDE.md  CMakeLists.txt
integrated_rtos_work/main/: CMakeLists.txt  accel_task.c  aggregator_task.c  analytics_task.c  barcode_task.c  cnc_firmware_rtos.c  cnc_firmware_rtos.h  housekeeping_task.c  idf_component.yml  main.c  mqtt_task.c  mqtt_task.h  pressure_task.c  rfid_task.c  ultrasonic_task.c  wifi_server.c  wifi_server.h
new_pressure/: CMakeLists.txt  README.md
new_pressure/main/: CMakeLists.txt  new_pressure.c
trials/: CMakeLists.txt
trials/main/: CMakeLists.txt  trials.c
water_sensor/: CMakeLists.txt  README.md
water_sensor/main/: CMakeLists.txt  water_sensor.c
